--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -10,7 +10,7 @@ body {
   font-family: $font-inter;
   background-color: $white;
   overflow-x: hidden;
-  background: url(../images/trumpBg.jpeg) center no-repeat;
+  background: url(../images/trumpBg.webp) center no-repeat;
   background-size: cover;
 }
 
